# hermes-devcrew

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  TODOS.md  devcrew-closeout  devcrew-run  install.sh  pyproject.toml  team.yaml
agents/architect/: SOUL.md  config.yaml  distribution.yaml
agents/architect/skills/decompose-goal/: SKILL.md
agents/backend-dev/: SOUL.md  config.yaml  distribution.yaml
agents/designer/: SOUL.md  config.yaml  distribution.yaml
agents/devops/: SOUL.md  config.yaml  distribution.yaml
agents/domain-expert/: SOUL.md  config.yaml  distribution.yaml
agents/frontend-dev/: SOUL.md  config.yaml  distribution.yaml
agents/integrator/: SOUL.md  config.yaml  distribution.yaml
agents/qa/: SOUL.md  config.yaml  distribution.yaml
agents/reviewer/: SOUL.md  config.yaml  distribution.yaml
docs/: usage.md
docs/superpowers/plans/: 2026-06-14-devos-release-manager-phase1.md
docs/superpowers/specs/: 2026-06-01-hermes-devcrew-design.md  2026-06-05-design-reference-skill-design.md  2026-06-13-devos-release-manager-design.md
release_harness/: __init__.py  cardfiles.py  check_library.py  check_library.yaml  clean_integrate.py  exits.py  pr_hygiene_gate.py  spec_claim_verify.py
scripts/: upgrade.sh
skills/devops/kanban-worker/: SKILL.md
tests/: conftest.py  test_agent_configs.py  test_devcrew_closeout.py  test_release_manager_role.py
tests/release_harness/: eval_gate_model.md  test_cardfiles.py  test_check_library.py  test_clean_integrate.py  test_cli.py  test_exits.py  test_pr_hygiene_gate.py  test_spec_claim_verify.py
(+26 files in other folders)
